# edi-835-parser

./: .gitignore  README.md  edi_parser.py  pyproject.toml  requirements.txt  setup.py
.circleci/: config.yml
.github/: FUNDING.yml
edi_835_parser/: __init__.py
input/: modified_quadax_sample_835.txt  quadax_sample_835.txt  sample_835.txt
modified_raw_files/: QRP_31048_L156_P8LA010119.txt  QRP_31048_LK81_H8LA010119.txt  QRP_39026_L504_HMAA040119.txt  QRP_39180_LQ10_NG6A010119.txt  QRP_47181_LD36_HF7A010119.txt  QRP_47181_LQ10_PF7A010119.txt  QRP_52106_LQ43_P1VA010118.txt  QRP_52192_L156_PBVA010119.txt  QRP_52192_L500_HBVA010119 2.txt  QRP_52192_L500_HBVA010119.txt  QRP_52192_LD36_HBVA010119.txt  QRP_52192_LK40_HBVA010119 2.txt  QRP_52192_LK40_HBVA010119.txt  QRP_52192_LM18_HBVA010119.txt  QRP_52192_LM51_HBVA010119.txt  QRP_52192_LM82_HBVA010119.txt  QRP_52192_LN08_HBVA010119.txt  QRP_52192_LQ25_PBVA010119.txt  QRP_52192_LQ29_PBVA010119.txt  QRP_52563_L087_HNUA030119.txt  QRP_52563_L087_HNUA070119.txt  QRP_52563_L087_HNUA090119.txt  QRP_52563_L087_HNUA120119.txt  QRP_52563_L087_HNUA130119.txt  QRP_52563_L087_PNUA120119.txt  QRP_52563_L087_PNUA830119.txt  QRP_52563_L096_HNUA010119.txt  QRP_52563_L096_PNUA010119.txt  QRP_52563_L117_HNUA010119.txt  QRP_52563_LE65_HNUA010119.txt  QRP_52563_LF91_HNUA010119.txt  QRP_52563_LF96_HNUA010119.txt  QRP_52563_LG04_HNUA010119.txt  QRP_52563_LG64_HNUA010119.txt  QRP_52563_LG76_PNUA010119.txt  QRP_52563_LH73_HNUA010119.txt  QRP_52563_LH76_HNUA010119.txt  QRP_52563_LH99_PNUA010119.txt  QRP_52563_LJ06_PNUA010119.txt  (+422 more)
(+526 files in other folders)
