[tool.poetry]
name = "edi-835-parser"
version = "1.6.0"
description = "A simple EDI 835 file format parser."
authors = ["Keiron Stoddart <keiron.stoddart@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "edi_835_parser"}]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
